# rl_car

./: .gitignore  car.py  car.urdf  test.py  train.py
arduino/irl-toycar/: irl-toycar.ino  motor.h
python/: car.py  requirements.txt  test-real.py  test.py  train.py
python/camera-calibration/: draw_chessboard.py
python/config/: gripper_multi_object.yaml  gripper_one_object.yaml  reacher.yaml
python/envs/gripper_multi_object/: real.py  sim.py
python/envs/gripper_one_object/: car.py  real.py  sim.py
python/envs/reacher/: car.py  real.py  sim.py
python/gui/: gui.py
python/rl_car/: generate_lerobot_dataset.py  pyproject.toml  requirements.txt  test_lerobot.py  test_lerobot_real.py  train.py
python/rl_car/camera-calibration/: calibrate.py  get_images.py
python/rl_car/envs/gripper_multi_object/: real.py
python/rl_car/imitation-learning/: evaluate.py  gamepad.py  teleop.py
python/rl_car/src/rl_car/config/: gripper_multi_object.yaml  gripper_one_object.yaml  reacher.yaml
python/rl_car/src/rl_car/envs/gripper_one_object/: real.py  sim.py
python/rl_car/src/rl_car/envs/reacher/: real.py  sim.py
python/rl_car/src/rl_car/urdf/: base.stl  car_gripper.urdf  kp.urdf  roof.stl
python/rl_car/src/rl_car/utils/: differential_drive_robot.py  oak_d_camera.py
python/rl_car/urdf/: gripper.stl  pringles.urdf
python/urdf/: car_gripper.urdf  gripper.stl  urdf_utils.py
python/utils/: camera.py  differential_drive_robot.py  gui.py  oak_d_camera.py
python/utils/sam2/: sam2_detector.py
