[project]
name = "rl_car"
version = "0.1.0"
requires-python = ">=3.8"
authors = [
  {name = "Joe Jeffcock", email = "joejeffcock@gmail.com"},
]
description = "Teaching a differential drive robot to do things with RL"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
